<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr"
    android:padding="12dp"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/comfirmation"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/no" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesBtn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:text="@string/yes"
        android:textColor="@color/white"/>

</LinearLayout>